[tool.poetry]
name = "beepu-moderation"
version = "0.1.0"
description = "a bot devloped to aid in server moderation "
authors = ["CalebThomas8 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
config = "^0.5.1"
nextcord = "^2.0.0-alpha.6"
nextcord-ext-menus = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
